# informatyka_zut

./: .gitignore  .gitmodules  README.md  info_listopad.cpp  m1.txt  m2.txt  matrix.c  matrix_1000_1.txt  matrix_1000_2.txt  programowanieC_grudzien.cpp  update_submodules.bat
Algorytmy_labo/: 34410.algo2.lab01.main.cpp  34410.algo2.lab02.main.cpp  34410.algo2.lab03.main.cpp  34410.algo2.lab04.main.cpp  34410.algo2.lab05.main.cpp  34410.algo2.lab06.main.cpp  34410.algo2.lab07.main.cpp  Algorytmy_labo.pro  DArray.h  labo1.cpp  labo2.cpp  labo2.h  labo3.cpp  labo3.h  labo4.cpp  labo4.h  labo5.cpp  labo5.h  labo6.cpp  labo6.h  labo7.cpp  main.cpp
CMD_study_helper/: main.cpp
IO_BugTracker/: .gitignore  Dokumentacja IO_Bugtracker - Jakub Kościołowski - Lewicki Maciej.docx  IO_BugTracker.pro  IO_Bugtracker.bak  LICENSE  README.md
KCM_lab2/: KCM_lab2.pro  imageprocessing.cpp  imageprocessing.h  main.cpp  mainwindow.cpp  mainwindow.h
MS_Pendulum/: CMakeLists.txt  main.cpp  olcPixelGameEngine.h
PiAD/: autos.csv  lab1.py  lab2_3.py  lab4.py  (+2 more)
sztuczna_inteligencja/: CMakeLists.txt  main.cpp  puzzles.h  slidepuzzle.cpp  slidepuzzle.h  sudoku.cpp  sudoku.h
sztuczna_inteligencja/Connect4/: connect4.cpp  connect4.h  main.cpp  utils.h
sztuczna_inteligencja/Profile/: Instrumentor.h
sztuczna_inteligencja/SIplusplus_wchar/: README.md  graph_search.cpp  graph_search.hpp  graph_state.cpp  graph_state.hpp  queue.hpp
sztuczna_inteligencja/SlidePuzzle/: main.cpp  slidepuzzle.cpp  slidepuzzle.h  utils.h
sztuczna_inteligencja/Sudoku/: main.cpp  puzzles.h  sudoku.cpp  sudoku.h
(+314 files in other folders)
